added stylesheet back in
git-svn-id: http://svn.foaf-project.org/foaftown/specgen@306 55bc8a7a-491b-0410-89ea-f8cff589e9ef

--- a/examples/foaf/template.html
+++ b/examples/foaf/template.html
@@ -6,6 +6,8 @@
   <title>FOAF Vocabulary Specification</title>
   <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet"
   type="text/css" />
+  <link href="style.css" rel="stylesheet"
+  type="text/css" />
   <link href="http://xmlns.com/foaf/spec/index.rdf" rel="alternate"
   type="application/rdf+xml" />
 </head>
