--- a/examples/foaf/template.html
+++ b/examples/foaf/template.html
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"        xmlns:foaf="http://xmlns.com/foaf/0.1/"
-  xmlns:dc="http://purl.org/dc/elements/1.1/">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+  xmlns:foaf="http://xmlns.com/foaf/0.1/"
+  xmlns:dc="http://purl.org/dc/elements/1.1/"
+  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"  
+  xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+  xmlns:owl="http://www.w3.org/2002/07/owl#"
+  xmlns:vs="http://www.w3.org/2003/06/sw-vocab-status/ns#"
+  xmlns:wot="http://xmlns.com/wot/0.1/"
+>
 <head>
   <title>FOAF Vocabulary Specification</title>
   <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet"
