Fixed up testcases to use the new API; removed some hacks workarounds for the old testcases not working, and added a link to the namespace in the template as it doesn't say what it is anywhere
git-svn-id: http://svn.foaf-project.org/foaftown/specgen@329 55bc8a7a-491b-0410-89ea-f8cff589e9ef

--- a/examples/foaf/template.html
+++ b/examples/foaf/template.html
@@ -83,7 +83,7 @@ implementation feedback and emerging best practices. New terms may be
 added at any time (as with a natural-language dictionary),  and consequently this specification 
 is an evolving work. The FOAF RDF namespace, by contrast, is fixed and it's 
 identifier is not expected to <a href="#sec-evolution">change</a>. Furthermore, efforts are 
-underway to ensure the long-term preservation of the FOAF namespace, its xmlns.com 
+underway to ensure the long-term preservation of the <a href="http://xmlns.com/foaf/0.1/">FOAF namespace</a>, its xmlns.com 
 domain name and associated documentation.
 </p>
 
@@ -305,6 +305,10 @@ As usual, see the <a href="#sec-changes">changes</a> section for details of the 
   </div>
 
   <div style="clear: left;"></div>
+
+  <h2 id="sec-example">Namespace</h2>
+
+  <p>The FOAF namespace is <a href="http://xmlns.com/foaf/0.1/">http://xmlns.com/foaf/0.1/</a></p>  
 
   <h2 id="sec-example">Example</h2>
 
