updated, this just a random snapshot, working foaf spec managed under xmlns.com svn...
git-svn-id: http://svn.foaf-project.org/foaftown/specgen@436 55bc8a7a-491b-0410-89ea-f8cff589e9ef

--- a/examples/foaf/template.html
+++ b/examples/foaf/template.html
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-  xmlns:foaf="http://xmlns.com/foaf/0.1/"
-  xmlns:dc="http://purl.org/dc/elements/1.1/"
-  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"  
-  xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
-  xmlns:owl="http://www.w3.org/2002/07/owl#"
-  xmlns:vs="http://www.w3.org/2003/06/sw-vocab-status/ns#"
-  xmlns:wot="http://xmlns.com/wot/0.1/"
->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"        xmlns:foaf="http://xmlns.com/foaf/0.1/"
+  xmlns:dc="http://purl.org/dc/elements/1.1/">
 <head>
   <title>FOAF Vocabulary Specification</title>
   <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet"
@@ -20,22 +13,22 @@
 </head>
 
 <body>
-  <h1>FOAF Vocabulary Specification 0.91<br /></h1>
+  <h1>FOAF Vocabulary Specification 0.95<br /></h1>
 
-  <h2>Namespace Document 2 November 2007 - <em>OpenID Edition</em></h2>
+  <h2>Namespace Document 6 June 2009 - <em>Aged Edition</em></h2>
 
   <dl>
 
     <dt>This version:</dt>
 
     <dd><a href=
-    "http://xmlns.com/foaf/spec/20071002.html">http://xmlns.com/foaf/spec/20071002.html</a> (<a href="20071002.rdf">rdf</a>)</dd>
+    "http://xmlns.com/foaf/spec/20090606.html">http://xmlns.com/foaf/spec/20090606.html</a> (<a href="20090606.rdf">rdf</a>)</dd>
 
     <dt>Latest version:</dt>
     <dd><a href="http://xmlns.com/foaf/spec/">http://xmlns.com/foaf/spec/</a> (<a href="index.rdf">rdf</a>)</dd>
 
     <dt>Previous version:</dt>
-    <dd><a href="20070524.html">http://xmlns.com/foaf/spec/20070524.html</a> (<a href="20070524.rdf">rdf</a>)</dd>
+    <dd><a href="20071002.html">http://xmlns.com/foaf/spec/20071002.html</a> (<a href="20071002.rdf">rdf</a>)</dd>
 
     <dt>Authors:</dt>
     <dd><a href="mailto:danbri@danbri.org">Dan Brickley</a>,
@@ -50,8 +43,7 @@
     "#sec-ack">acknowledgements</a>.</dd>
   </dl>
 
-  <p class="copyright">Copyright &copy; 2000-2007 Dan
-  Brickley and Libby Miller<br />
+  <p class="copyright">Copyright &#169; 2000-2009 Dan Brickley and Libby Miller<br />
   <br />
 
   <!-- Creative Commons License -->
@@ -83,7 +75,7 @@ implementation feedback and emerging best practices. New terms may be
 added at any time (as with a natural-language dictionary),  and consequently this specification 
 is an evolving work. The FOAF RDF namespace, by contrast, is fixed and it's 
 identifier is not expected to <a href="#sec-evolution">change</a>. Furthermore, efforts are 
-underway to ensure the long-term preservation of the <a href="http://xmlns.com/foaf/0.1/">FOAF namespace</a>, its xmlns.com 
+underway to ensure the long-term preservation of the FOAF namespace, its xmlns.com 
 domain name and associated documentation.
 </p>
 
@@ -305,10 +297,6 @@ As usual, see the <a href="#sec-changes">changes</a> section for details of the 
   </div>
 
   <div style="clear: left;"></div>
-
-  <h2 id="sec-example">Namespace</h2>
-
-  <p>The FOAF namespace is <a href="http://xmlns.com/foaf/0.1/">http://xmlns.com/foaf/0.1/</a></p>  
 
   <h2 id="sec-example">Example</h2>
 
