--- a/examples/weighted-interests/template.html
+++ b/examples/weighted-interests/template.html
@@ -27,6 +27,8 @@ xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
 
  <h2 id="glance">Weighted Interest at a glance</h2>
 
+<p>This is a draft vocabulary for describing preferences within 
+contexts, developed for the NoTube project.</p>
 
 <!-- summary a-z -->
 %s
