committing edsu patch for rdflib trunk, as this gives us rdfa parsing. you need html5lib now, and install librdfa from svn.
git-svn-id: http://svn.foaf-project.org/foaftown/specgen@478 55bc8a7a-491b-0410-89ea-f8cff589e9ef

--- a/examples/template.html
+++ b/examples/template.html
@@ -1,10 +1,14 @@
 <html>
 <body>
 <h2 id="glance">At a glance</h2>
+
+<h3>first slot</h3>
+%s
  
+<h3>second slot</h3>
 %s
 
-
+<h3>3rd slot</h3>
 %s
 
 
