--- a/foaf-live/template.html
+++ b/foaf-live/template.html
@@ -1,1 +1,1 @@
-/Users/danbri/working/foaf/trunk/xmlns.com/htdocs/foaf/0.1/template.html
+../../../foaf/trunk/xmlns.com/htdocs/foaf/spec/template.html
